[gd_scene load_steps=12 format=3 uid="uid://spjcu6qk7jd5"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_6em6x"]
[ext_resource type="Texture2D" uid="uid://dp2u0h380twfn" path="res://art/Tile/GREEN BACK.png" id="2_5w6p3"]
[ext_resource type="FontFile" uid="uid://r2g20ousx1x4" path="res://art/FONT/Hypeblox-L3YGZ.ttf" id="2_jolsj"]
[ext_resource type="Shader" path="res://scenes/Title.gdshader" id="3_mc0n7"]
[ext_resource type="Texture2D" uid="uid://b3gqe5s64dt2f" path="res://art/LOGO/linkedin_logo.png" id="5_am066"]
[ext_resource type="Script" path="res://scenes/HIGHSCORELABEL.gd" id="5_yn5mu"]
[ext_resource type="Texture2D" uid="uid://dr6tirvnnuvqu" path="res://art/LOGO/YouTube.png" id="6_2qrgh"]
[ext_resource type="Texture2D" uid="uid://b0jskn4j6tbuc" path="res://art/LOGO/instagram.png" id="7_ql5oj"]
[ext_resource type="Texture2D" uid="uid://dxtmdn0kbht20" path="res://art/LOGO/godot.png" id="8_n4ieo"]
[ext_resource type="Script" path="res://scenes/GameStatusBanner.gd" id="10_bcoda"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2nv43"]
shader = ExtResource("3_mc0n7")
shader_parameter/height = 5.0
shader_parameter/speed = 5.0

[node name="MENU" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6em6x")
metadata/_edit_lock_ = true

[node name="Start_Options_Quit" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 75.0
offset_top = 500.0
offset_right = 270.0
offset_bottom = 676.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="START" type="Button" parent="Start_Options_Quit"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0.870588, 0.137255, 0.137255, 1)
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 50
text = "START"

[node name="OPTIONS" type="Button" parent="Start_Options_Quit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="QUIT" type="Button" parent="Start_Options_Quit"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="ScoreContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 744.0
offset_bottom = 416.0
metadata/_edit_lock_ = true

[node name="BACKGROUND" type="TextureRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_2nv43")
layout_mode = 0
offset_top = -1.0
offset_right = 717.0
offset_bottom = 1128.0
texture = ExtResource("2_5w6p3")
expand_mode = 1
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="SCOREBOARD" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -374.0
offset_top = -609.0
offset_right = -57.0
offset_bottom = -290.0
grow_horizontal = 0
grow_vertical = 0

[node name="SCOREBOARDLABEL" type="Label" parent="SCOREBOARD"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 40
text = "SCORE BOARD"
horizontal_alignment = 1

[node name="HIGHSCORELABEL" type="Label" parent="SCOREBOARD"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 40
text = "HIGH SCORE: 9999"
vertical_alignment = 1
script = ExtResource("5_yn5mu")

[node name="CURRENTSCORELABEL" type="Label" parent="SCOREBOARD"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 40
text = "YOUR SCORE: 0"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="SOCIALLINKS@LINKEDIN" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 50
icon = ExtResource("5_am066")

[node name="SOCIALLINKS@YOUTUBE" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("6_2qrgh")

[node name="SOCIALLINKS@INSTAGRAM" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("7_ql5oj")

[node name="SOCIALLINKS@GODOT" type="Button" parent="."]
layout_mode = 2
icon = ExtResource("8_n4ieo")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 0

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
position = Vector2(-337, 693)
script = ExtResource("10_bcoda")

[node name="MESSAGEBANNER" type="VBoxContainer" parent="ParallaxBackground2/ParallaxLayer"]
offset_left = 1.0
offset_top = 84.0
offset_right = 1329.0
offset_bottom = 278.0
alignment = 1

[node name="GAMEMESSAGE" type="Label" parent="ParallaxBackground2/ParallaxLayer/MESSAGEBANNER"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jolsj")
theme_override_font_sizes/font_size = 200
text = "MESSAGE
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Start_Options_Quit/START" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Start_Options_Quit/OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Start_Options_Quit/QUIT" to="." method="_on_quit_pressed"]
